[package]
name = "tkn-cli"
version = "0.1.1"
edition = "2024"
authors = ["contact@jettchen.me"]
license = "MIT/Apache-2.0"
description = "TKN: Quick Tokenizing in the terminal"
readme = "README.md"
homepage = "https://github.com/JettChenT/tkn"
repository = "https://github.com/JettChenT/tkn"
keywords = ["cli", "productivity", "tokenizing"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6"
tokenizers = { version = "0.21.1", features = ["http", "hf-hub"] }
tabled = { version = "0.18.0" }
indicatif = { version = "0.17.11", features = ["rayon"] }
rayon = "1.10.0"

[[bin]]
name = "tkn"
path = "src/main.rs"
